--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/reporte-avance-compromiso/reporte-avance-compromiso.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/reporte-avance-compromiso/reporte-avance-compromiso.component.scss
@@ -33,3 +33,9 @@ span {
   font-size: 20px;
   margin-left: 0.2em;
 }
+
+.header-label {
+  font-weight: 500;
+  font-size: 20px;
+  margin-left: 0.2em;
+}
