--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/tabla-detalle-compromiso/tabla-detalle-compromiso.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/tabla-detalle-compromiso/tabla-detalle-compromiso.component.html
@@ -1,4 +1,4 @@
-<div class="margin-90 text-center table-responsive">
+<div class="margin-90 table-responsive">
   <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="fechaCreacion">
@@ -8,7 +8,7 @@
 
       <ng-container matColumnDef="descripcionSeguimiento">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión realizada </th>
-        <td mat-cell *matCellDef="let element" align="center"> {{ textoLimpioMessage( element.descripcionSeguimiento ) }} </td>
+        <td mat-cell *matCellDef="let element"> {{ textoLimpioMessage( element.descripcionSeguimiento ) }} </td>
       </ng-container>
 
       <ng-container matColumnDef="estadoCompromiso">
