--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/tabla-gestion-compromisos/tabla-gestion-compromisos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/tabla-gestion-compromisos/tabla-gestion-compromisos.component.html
@@ -23,7 +23,7 @@
 
     <ng-container matColumnDef="fechaCumplimiento">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha limite de cumplimiento </th>
-      <td mat-cell *matCellDef="let element" align="center"> {{ element.fechaCumplimiento | date: 'dd/MM/yyyy' }} </td>
+      <td mat-cell *matCellDef="let element" align="center"> {{ element.fechaCumplimiento }} </td>
     </ng-container>
 
     <ng-container matColumnDef="estadoCompromiso">
