--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/form-observacion-actualizacion-poliza/form-observacion-actualizacion-poliza.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/form-observacion-actualizacion-poliza/form-observacion-actualizacion-poliza.component.html
@@ -11,7 +11,7 @@
               (observaciones.get('tieneObservacion').invalid && estaEditando)
             "
           >
-            ¿Desde la supervisión tiene observaciones frente a la actualización de la póliza que deban ser tenidas en
+            ¿Desde control y seguimiento tiene observaciones frente a la actualización de la póliza que deban ser tenidas en
             cuenta en la liquidación?
           </label>
         </div>
