debug solicitar contratacion

--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/definir-fuentes-y-usos/definir-fuentes-y-usos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/definir-fuentes-y-usos/definir-fuentes-y-usos.component.html
@@ -50,7 +50,7 @@
 
   <div class="text-center mb-2em">
     <h1 class="title-menu--h1" *ngIf="contratacionProyecto">
-      {{ contratacionProyecto['contratacion'].tipoSolicitudCodigo === '2' ? 'Interventoria' : 'Obra' }}
+      {{ contratacionProyecto['contratacion'].tipoSolicitudCodigo === '2' ? 'Interventoría' : 'Obra' }}
     </h1>
   </div>
   <p class="text-center info-container">
