--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/definir-caracteristicas/definir-caracteristicas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/definir-caracteristicas/definir-caracteristicas.component.html
@@ -143,7 +143,7 @@
           </div>
         </div>
         <div class="row animatedDown" *ngIf="addressForm.controls.avanceObra.value == true">
-          <div class="col-md-6">
+          <div class="col-md-8">
             <div class="row">
               <div class="pr-1">
                 <label
@@ -159,7 +159,7 @@
                 </label>
               </div>
               <div class="col d-flex">
-                <mat-form-field class="full-width">
+                <mat-form-field style="width: 38%;">
                   <input matInput type="number" min="1" max="100" maxLength="3" formControlName="porcentajeAvanceObra" required
                   oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);" />
                 </mat-form-field>
