--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/form-solicitud/form-solicitud.component.html
@@ -62,39 +62,39 @@
         </div>
       </div>
 
-      <div *ngIf="solicitudes.tipoSolicitudCodigo === tipoSolicitudCodigo.procesoSeleccion" style="margin-top: .6em;">
+      <div class="row" *ngIf="solicitudes.tipoSolicitudCodigo === tipoSolicitudCodigo.procesoSeleccion" style="margin-top: .6em;">
         <div class="pr-1">
           <label><b>Justificación</b></label>
         </div>
-        <div class="col color-blue" [innerHTML]="solicitudes.procesoSeleccion?.justificacion"></div>
+        <div class="col color-blue" [innerHTML]="solicitudes.procesoSeleccion?.justificacion" style="text-align: justify;"></div>
       </div>
 
-      <div *ngIf="solicitudes.tipoSolicitudCodigo === tipoSolicitudCodigo.actualizacionProcesoSeleccion" style="margin-top: .6em;">
+      <div class="row" *ngIf="solicitudes.tipoSolicitudCodigo === tipoSolicitudCodigo.actualizacionProcesoSeleccion" style="margin-top: .6em;">
         <div class="pr-1">
           <label><b>Justificación</b></label>
         </div>
-        <div class="col color-blue" [innerHTML]="solicitudes.procesoSeleccionMonitoreo?.procesoSeleccion?.justificacion"></div>
+        <div class="col color-blue" [innerHTML]="solicitudes.procesoSeleccionMonitoreo?.procesoSeleccion?.justificacion" style="text-align: justify;"></div>
       </div>
 
-      <div *ngIf="solicitudes.tipoSolicitudCodigo === tipoSolicitudCodigo.evaluacionProceso" style="margin-top: .6em;">
+      <div class="row" *ngIf="solicitudes.tipoSolicitudCodigo === tipoSolicitudCodigo.evaluacionProceso" style="margin-top: .6em;">
         <div class="pr-1">
           <label><b>Justificación</b></label>
         </div>
-        <div class="col color-blue" [innerHTML]="solicitudes.procesoSeleccion?.justificacion"></div>
+        <div class="col color-blue" [innerHTML]="solicitudes.procesoSeleccion?.justificacion" style="text-align: justify;"></div>
       </div>
       
       <div style="margin-top: .6em;">
-        <div *ngIf="solicitudes.desarrolloSolicitud !== undefined && esComiteFiduciario === false">
+        <div class="row" *ngIf="solicitudes.desarrolloSolicitud !== undefined && esComiteFiduciario === false">
           <div class="pr-1">
             <label><b>Desarrollo</b></label>
           </div>
-          <div class="col color-blue" [innerHTML]="innerObservacion( solicitudes.desarrolloSolicitud )"></div>
+          <div class="col color-blue" [innerHTML]="solicitudes.desarrolloSolicitud" style="text-align: justify;"></div>
         </div>
-        <div *ngIf="solicitudes.desarrolloSolicitudFiduciario !== undefined && esComiteFiduciario === true">
+        <div class="row" *ngIf="solicitudes.desarrolloSolicitudFiduciario !== undefined && esComiteFiduciario === true">
           <div class="pr-1">
             <label><b>Desarrollo</b></label>
           </div>
-          <div class="col color-blue" [innerHTML]="innerObservacion( solicitudes.desarrolloSolicitudFiduciario )"></div>
+          <div class="col color-blue" [innerHTML]="solicitudes.desarrolloSolicitudFiduciario" style="text-align: justify;"></div>
         </div>
       </div>
       <h2 class="card-subTitle">Decisiones</h2>
@@ -130,26 +130,26 @@
       </div>
 
       <ng-container *ngIf="solicitudes.tipoSolicitudCodigo === tipoSolicitudCodigo.procesoSeleccion || solicitudes.tipoSolicitudCodigo === tipoSolicitudCodigo.controversiaContractual; else elseTemplate">
-        <div style="margin-top: .6em;">
+        <div class="row" style="margin-top: .6em;">
           <div class="pr-1">
             <label><b>Observaciones de la solicitud</b></label>
           </div>
-          <b><div class="col color-blue" [innerHTML]="esComiteFiduciario === true ? solicitudes.observacionesFiduciario : solicitudes.observaciones"></div></b>
+          <b><div class="col color-blue" [innerHTML]="esComiteFiduciario === true ? solicitudes.observacionesFiduciario : solicitudes.observaciones" style="text-align: justify;"></div></b>
         </div>
       </ng-container>
       <ng-template #elseTemplate>
-        <div style="margin-top: .6em;">
-          <section *ngIf="esComiteFiduciario === false">
+        <div class="row" style="margin-top: .6em;">
+          <section class="d-flex" *ngIf="esComiteFiduciario === false">
             <div class="pr-1">
               <label><b>Observaciones</b></label>
             </div>
-            <div class="col color-blue" [innerHTML]="innerObservacion( solicitudes.observaciones )"></div>
+            <div class="col color-blue" [innerHTML]="solicitudes.observaciones" style="text-align: justify;"></div>
           </section>
-          <section *ngIf="esComiteFiduciario === true">
+          <section class="d-flex" *ngIf="esComiteFiduciario === true">
             <div class="pr-1">
               <label><b>Observaciones</b></label>
             </div>
-            <div class="col color-blue" [innerHTML]="innerObservacion( solicitudes.observacionesFiduciario )"></div>
+            <div class="col color-blue" [innerHTML]="solicitudes.observacionesFiduciario" style="text-align: justify;"></div>
           </section>
         </div>
       </ng-template>
